--- a/Final Product and Instructions/Feeder 3.1.ipynb
+++ b/Final Product and Instructions/Feeder 3.1.ipynb
@@ -83,7 +83,7 @@
    "id": "7261bda3-f0d1-4b0b-8704-c2b654813357",
    "metadata": {},
    "source": [
-    "Now that pandas is available for our use, we can use it to call our data file, making it available for modiffication."
+    "Now that pandas is available for our use, we can use it to call our data file, making it available for modification."
    ]
   },
   {
